# cirbo

./: .gitignore  .gitmodules  .gv  .pre-commit-config.yaml  CMakeLists.txt  Circuit.gv  Makefile  README.md  README_DEV.md  README_PYPI.md  README_ZIP.md  build.py  ex160_sintez.py  hypotenuse.py  mult_for_IWLS.py  pyproject.toml  sandbox.py  setup.py  tutorial.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: build_wheels.yaml  python-checks.yaml
benches/: test2.bench
boolean_circuit_tool/: __init__.py  exceptions.py
boolean_circuit_tool/circuits_db/: binary_dict_io.py  bit_io.py  circuits_coding.py  circuits_encoding.py  db.py  exceptions.py  normalization.py  temporary.py
boolean_circuit_tool/cnf/: __init__.py  cnf.py  tseytin.py  utils.py
boolean_circuit_tool/core/: __init__.py  boolean_function.py  circuit.py  combining_blocks_example.py  dummy.py  exceptions.py  gate.py  logic.py  operators.py  python_function.py  truth_table.py  utils.py
boolean_circuit_tool/core/circuit/: __init__.py  abc_commands.py  block.py  circuit.py  converters.py  exceptions.py  gate.py  operators.py  simplification.py  transformer.py  utils.py  validation.py
boolean_circuit_tool/core/circuits_db/: binary_dict_io.py  bit_io.py  circuits_coding.py  db.py
boolean_circuit_tool/core/combining/: combining_circuits.py
boolean_circuit_tool/core/parser/: abstract.py  bench.py
boolean_circuit_tool/core/synthesis/: circuit_search.py  subcircuit.py
boolean_circuit_tool/core/utils/: validation.py
boolean_circuit_tool/generation/arithmetics/: add_div_mod.py  add_equal.py  add_gate_from_TT.py  add_mul.py  add_n_bits_sum.py  add_sqrt.py  add_square.py
boolean_circuit_tool/minimization/: __init__.py  exception.py  simplification.py  subcircuit.py
boolean_circuit_tool/minimization/simplification/: __init__.py  _simplification_bu.py  cleanup.py  collapse_duplicate_gates.py  collapse_equivalent_gates.py  collapse_unary_operators.py  merge_duplicate_gates.py  merge_equivalent_gates.py  merge_unary_operators.py  remove_redundant_gates.py  simplifier.py
boolean_circuit_tool/sat/: __init__.py  exceptions.py  miter.py  sat.py
boolean_circuit_tool/sat/cnf/: __init__.py  cnf.py  tseytin.py
boolean_circuit_tool/synthesis/: circuit_search.py  exception.py  generation.py
boolean_circuit_tool/synthesis/generation/: __init__.py  exceptions.py  generation.py  helpers.py
boolean_circuit_tool/synthesis/generation/arithmetics/: __init__.py  _utils.py  add_div_mod.py  add_equal.py  add_gate_from_TT.py  add_gate_from_tt.py  add_mul.py  add_n_bits_sum.py  add_sqrt.py  add_square.py  div_mod.py  equality.py  multiplication.py  sqrt.py  square.py  subtraction.py  summation.py
cirbo/: __init__.py  exceptions.py
cirbo/circuits_db/: __init__.py  binary_dict_io.py  bit_io.py  circuits_encoding.py  data_utils.py  db.py  exceptions.py  normalization.py
cirbo/core/: boolean_function.py  exceptions.py  logic.py  python_function.py  truth_table.py
cirbo/core/circuit/: __init__.py  circuit.py  converters.py  exceptions.py  gate.py  operators.py  transformer.py  utils.py  validation.py
cirbo/core/parser/: __init__.py  aig.py  bench.py
cirbo/minimization/: exception.py  subcircuit.py
cirbo/minimization/simplification/: __init__.py  cleanup.py  merge_duplicate_gates.py  merge_equivalent_gates.py  merge_unary_operators.py  remove_constant_gates.py  remove_redundant_gates.py
cirbo/sat/: __init__.py  exceptions.py  miter.py  sat.py
cirbo/sat/cnf/: __init__.py  cnf.py  tseytin.py
cirbo/synthesis/: __init__.py  circuit_search.py  exception.py
cirbo/synthesis/generation/: __init__.py  exceptions.py  generation.py
cirbo/synthesis/generation/arithmetics/: CRT.py  __init__.py  _utils.py  div_mod.py  equality.py  multiplication.py  (+4 more)
data/: aig_db.bin.xz  xaig_db.bin.xz
docs/: conf.py  index.rst
docs/usage/: quickstart.rst
extensions/abc_extension/src/: main.c  run_abc.h
extensions/abc_wrapper/src/: abc.py  module.cpp  run_abc.h
extensions/dummy_extension/src/: main.cpp  module.cpp
extensions/mockturtle_wrapper/src/: cut_enumerates.hpp  module.cpp
tests/: conftest.py  synthesis_test.py
tests/boolean_circuit_tool/cnf/: tseytin_test.py
tests/boolean_circuit_tool/core/: dummy_test.py  python_function_test.py  truth_table_test.py
tests/boolean_circuit_tool/minimization/: simplification_test.py  subcircuit_test.py
tests/boolean_circuit_tool/sat/: miter_test.py  sat_test.py
tests/boolean_circuit_tool/synthesis/: circuit_generation_test.py  circuit_search_test.py  synthesis_with_db_test.py
tests/cirbo/circuits_db/: test_binary_dict_io.py  test_bit_io.py  test_circuits_encoding.py  test_db.py
tests/cirbo/core/: dummy_test.py  logic_test.py  python_function_test.py  truth_table_test.py  utils_test.py
tests/cirbo/minimization/: subcircuit_test.py
tests/cirbo/sat/: miter_test.py  sat_test.py
tests/cirbo/synthesis/: circuit_search_test.py  synthesis_with_db_test.py
tests/circuits_db/: test_binary_dict_io.py  test_bit_io.py  test_circuits_coding.py  test_circuits_encoding.py  test_db.py
tests/cnf/: tseytin_test.py
tests/core/: circuit_test.py  logic_test.py  operators_test.py  python_function_test.py  synthesis_test.py  truth_table_test.py  utils_test.py
tests/core/circuit/: circuit_test.py  gate_test.py  operators_test.py  utils_test.py
tests/core/combining/: combining_circuits_test.py
tests/core/parser/: bench_test.py
tests/extensions/abc_wrapper/: test_abc_wrapper.py
tests/extensions/dummy_extension/: test_arithmetics.py
tests/extensions/mockturtle_wrapper/: test_cuts.py
tests/generation/: arifmetics_test.py
tests/synthesis/: circuit_search_test.py  synthesis_with_db_test.py
tools/: check.py  formatter.py
tutorial/: 01_intro.py  analyzing_functions.py  checking_satisfiability.py  cleaning_majority7_circuit.py  cleaning_majority7_circuit_abc.py  factorization.py  sat_based_minimization.py  simple_cleanup.py  synthesizing_full_adder.py  synthesizing_majority6.py  synthesizing_majority6_hybrid.py  verifying_miter.py
(+50 files in other folders)
