[tool.poetry]
name = "boolean-circuit-tool"
version = "0.1.0"
description = "Tools and utilities for boolean circuit manipulations."
# TODO: list all authors.
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "LICENCE"
# Temporary guard against occasional publishing.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    # Temporary guard against occasional publishing.
    "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^10.4.0"
typing-extensions = "^4.12.2"
python-sat="^1.8.dev13"
pebble = "^5.0.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"
pytest = "^8.2.2"
usort = "^1.0.8.post1"
docformatter = "^1.7.5"
coverage = "^7.6.1"
pre-commit = "^3.8.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-autoapi = "^3.2.1"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=45",
    "wheel",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.flake8]
max-line-length = 88
statistics = true
count = true
show-source = true
select = [
    "E711",
    "E74",
    "E9",
    "F401",
    "F406",
    "F407",
    "F5",
    "F6",
    "F7",
    "F82",
    "F83",
    "F84",
    "F9",
    "N80",
    "N818"
]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    ".venv"
]
extend-select = [
    "B950"
]
extend-ignore = [
    "F632",
    # Following three are disabled for compatibility with black.
    # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
    "E203",
    "E501",
    "E701"
]

[tool.usort]
merge_imports = true

[tool.docformatter]
black = true
blank = true
recursive = true
pre-summary-newline = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pysat.*", "pebble.*"]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ABC: marks tests that use ABC extension (deselect with '-m \"not ABC\"')",
]
# Suppress warnings for invalid escape sequences in pysat package
filterwarnings = [
    "ignore:invalid escape sequence:DeprecationWarning"
]
