[project]
name = "cirbo"
version = "0.1.0"
requires-python = ">= 3.9"
description = "A New Tool for Boolean Circuit Analysis and Synthesis."
authors = [
    {name = "Daniil Averkov"},
    {name = "Tatiana Belova"},
    {name = "Gregory Emdin"},
    {name = "Mikhail Goncharov"},
    {name = "Viktoriia Krivogornitsyna"},
    {name = "Alexander S. Kulikov"},
    {name = "Fedor Kurmazov", email = "f.kurmazov.b@gmail.com"},
    {name = "Daniil Levtsov"},
    {name = "Georgie Levtsov"},
    {name = "Vsevolod Vaskin"},
    {name = "Aleksey Vorobiev"}
]
maintainers = [
    {name = "Fedor Kurmazov", email = "f.kurmazov.b@gmail.com"}
]
readme = "README_PYPI.md"
license = {file = "LICENCE"}
# Temporary guard against occasional publishing.
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["circuit", "synthesis", "analysis"]
dependencies = [
    "more-itertools >= 10.4.0",
    "typing-extensions >= 4.12.2",
    "python-sat >= 1.8.dev13",
    "pebble >= 5.0.7",
    "graphviz >= 0.20.3",
]

[project.urls]
Repository = "https://github.com/SPbSAT/cirbo"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=45",
    "wheel",
]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
test-command = [
  "pytest {package}/tests -v",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"
pytest = "^8.2.2"
usort = "^1.0.8.post1"
docformatter = "^1.7.5"
coverage = "^7.6.1"
mock = "^5.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-autoapi = "^3.2.1"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.flake8]
max-line-length = 88
statistics = true
count = true
show-source = true
select = [
    "E711",
    "E74",
    "E9",
    "F401",
    "F406",
    "F407",
    "F5",
    "F6",
    "F7",
    "F82",
    "F83",
    "F84",
    "F9",
    "N80",
    "N818"
]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    ".venv"
]
extend-select = [
    "B950"
]
extend-ignore = [
    "F632",
    # Following three are disabled for compatibility with black.
    # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
    "E203",
    "E501",
    "E701"
]

[tool.usort]
merge_imports = true

[tool.docformatter]
black = true
blank = true
recursive = true
pre-summary-newline = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pysat.*", "pebble.*", "mockturtle_wrapper.*", "graphviz.*"]


[tool.pytest.ini_options]
# Suppress warnings for invalid escape sequences in pysat package

addopts = "-m 'not db_aig and not db_xaig and not slow and not ABC' --ignore=third_party"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "db_aig: marks tests that use aig database",
    "db_xaig: marks tests that use xaig database",
    "ABC: marks tests that use ABC extension (deselect with '-m \"not ABC\"')",

]
filterwarnings = [
    "ignore:invalid escape sequence:DeprecationWarning"
]
